--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -153,6 +153,8 @@
 
 \newcommand{\interps}[1]{\mathsf{Interps[ #1 ]}}
 
+\newcommand{\inv}[1]{#1^{-1}}
+
 \newcommand{\invert}[2]{\overline{#1}^{#2}}
 
 \newcommand{\invsof}[1]{\mathsf{Invs}[ #1 ]}
@@ -205,6 +207,8 @@
 
 \newcommand{\renameclauses}[3]{\mathsf{Rename}[ #1, #2, #3 ]}
 
+\newcommand{\renamefn}[2]{\mathsf{renm}_{#1 \mapsto #2}}
+
 \newcommand{\renamesub}[4]{\mathsf{Rename}[ #1, #2, #3, #4 ]}
 
 \newcommand{\restypes}{T}
@@ -220,6 +224,8 @@
 \newcommand{\posreltypes}{T_R^{X \union \exppos}}
 
 \newcommand{\prepend}[1]{\cons_{#1}}
+
+\newcommand{\prependfn}[4]{\mathsf{pre}^{#1, #2}_{#3, #4}}
 
 \newcommand{\prevrule}[1]{\mathsf{Prev}[ #1 ]}
 
